<resources>
    <string name="app_name">Klim</string>
    <string name="next">NEXT</string>
    <string name="points">Balance</string>
    <string name="level">Level</string>
    <string name="withdrawal">Withdrawal money</string>
    <string name="info">about project</string>
    <string name="not_avalible_feature">This feature is not yet available</string>
    <string name="in_process">This page is still under construction</string>
    <string name="choose">Choose one answer</string>
    <string name="secret_activity">SECRET ACTIVITY</string>
    <string name="make_level_1">level 1</string>
    <string name="make_level_2">level 2</string>
    <string name="make_level_3">level 3</string>
    <string name="make_level_4">level 4</string>
    <string name="make_level_5">level 5</string>
    <string name="add">add</string>
    <string name="add_points">Add points</string>
    <string name="no_internet_connection">No internet connection or weak signal</string>
    <string name="withdrawal_to_payeer">Withdrawal to payeer</string>
    <string name="withdrawal_to_qiwi">Withdrawal to qiwi</string>
    <string name="withdrawal_to_uzcard">Withdrawal to uzcard</string>
    <string name="withdrawal_to_humo">Withdrawal to humo</string>
    <string name="off0">0% off</string>
    <string name="off42">4,2% off</string>
    <string name="off83">8,3% off</string>
    <string name="off167">16,7% off</string>
    <string name="points24000">24000 points</string>
    <string name="points19800">19800 points</string>
    <string name="points11500">11500 points</string>
    <string name="points2400">2400 points</string>
    <string name="back">back</string>
    <string name="dont_have_enough_points">You don\'t have enough money</string>
    <string name="points_have_been_cancelled.">Your points have been cancelled</string>
    <string name="cancel">cancel</string>
    <string name="order_a_payout">order a payout</string>
    <string name="type_wallet_path">Type wallet nuper</string>
    <string name="type_card_number">Type card number</string>
    <string name="comment">Comment</string>
    <string name="not_necessary">Not necessary</string>
    <string name="necessary">Necessary</string>
    <string name="ordered_amount">Ordered amount</string>
    <string name="chooseWalletCurrency">Select currency of your wallet</string>
    <string name="enter_wallet_number">Enter wallet number</string>
    <string name="enter_card_number">Enter card number</string>
    <string name="in_case">In case of incorrect filling of the order form, your funds do not belong to the return. They will be lost!</string>
    <string name="attention">Attention!!!</string>
    <string name="order">order</string>
    <string name="edit">edit</string>
    <string name="сurrency">Currency</string>
    <string name="sum">Sum</string>
    <string name="requisite">Requisite</string>
    <string name="enterPassword">Enter your password</string>
    <string name="error">ERROR</string>
    <string name="order_successfully_created">Order successfully created</string>
    <string name="hide_points">hide points</string>
    <string name="show_points">show points</string>
    <string name="all">All</string>
    <string name="humo" translatable="false">Humo</string>
    <string name="uzcard" translatable="false">Uzcard</string>
    <string name="qiwi" translatable="false">Qiwi</string>
    <string name="payeer" translatable="false">Payeer</string>
    <string name="order_count">Order Count</string>
    <string name="order_sum">Order sum</string>
    <string name="show_statistiks">show statistics</string>
    <string name="hide_statistiks">hide statistiks</string>
    <string name="not_payed">Not payed yet</string>
    <string name="payed">Payed</string>
    <string name="copy">copy</string>
    <string name="copied">Copied</string>
    <string name="empty">empty</string>
    <string name="payment_successfully_ordered">Payment successfully ordered</string>
    <string name="about_order">About order</string>
    <string name="post_success">The payout order has been successfully created. Your order will be processed from 3 to 30 days, depending on the replenishment of our reserves</string>
    <string name="ok" translatable="false">ok</string>
    <string name="make_payed">Make payed</string>
    <string name="completed_successfully">Сompleted successfully</string>
    <string name="about_the_project">How to use</string>
    <string name="done">done</string>
    <string name="withdrawal_to">Withdrawal to</string>
    <string name="wallet_path">Wallet number</string>
    <string name="card_number">Card number</string>
    <string name="wallet_currency">Wallet currency</string>
    <string name="successfully">Successfully</string>
    <string name="understood">Understood</string>
    <string name="no">No</string>
    <string name="cause">Cause</string>
    <string name="number">Number</string>
    <string name="statistics">Statistics</string>
    <string name="orders">Orders</string>
    <string name="community">Community</string>
    <string name="withdraw_money_to">Withdraw money to</string>
    <string name="continue_withdraval">Continue</string>
    <string name="choose_withdrawal_methood">Choose a withdrawal method!</string>
    <string name="type_withdrawal_sum">Enter the withdrawal amount</string>
    <string name="dollar_value">minimum withdrawal 0.3$</string>
    <string name="pointsCount">points</string>
    <string name="this_">this</string>
    <string name="pleace_wait">Wait, please</string>
</resources>