<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dialog">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintCheckWithdrawalDialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingBottom="10dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView65"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"
                    android:text="@string/attention"
                    android:textColor="@color/wrong_answer_box_color"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView67"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/in_case"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/textView65"
                    app:layout_constraintStart_toStartOf="@+id/textView65"
                    app:layout_constraintTop_toBottomOf="@+id/textView65" />

                <TextView
                    android:id="@+id/textView68"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/requisite"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="@+id/textView67"
                    app:layout_constraintStart_toStartOf="@+id/textView67"
                    app:layout_constraintTop_toBottomOf="@+id/textView67" />

                <ImageView
                    android:id="@+id/imgCheckWallet"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="8dp"
                    android:scaleType="centerInside"
                    app:layout_constraintStart_toStartOf="@+id/textView68"
                    app:layout_constraintTop_toBottomOf="@+id/textView68"
                    app:srcCompat="@drawable/payeer" />

                <TextView
                    android:id="@+id/tvCheckWalletName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="TextView"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/tvCheckWalletPath"
                    app:layout_constraintEnd_toEndOf="@+id/textView68"
                    app:layout_constraintStart_toEndOf="@+id/imgCheckWallet"
                    app:layout_constraintTop_toTopOf="@+id/imgCheckWallet" />

                <TextView
                    android:id="@+id/tvCheckWalletPath"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="TextView"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/tvCheckWalletCurrency"
                    app:layout_constraintEnd_toEndOf="@+id/tvCheckWalletName"
                    app:layout_constraintStart_toEndOf="@+id/imgCheckWallet"
                    app:layout_constraintTop_toBottomOf="@+id/tvCheckWalletName" />

                <TextView
                    android:id="@+id/tvCheckWalletCurrency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="TextView"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/tvCheckMoney"
                    app:layout_constraintEnd_toEndOf="@+id/tvCheckWalletPath"
                    app:layout_constraintStart_toEndOf="@+id/imgCheckWallet"
                    app:layout_constraintTop_toBottomOf="@+id/tvCheckWalletPath" />

                <TextView
                    android:id="@+id/tvCheckMoney"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:text="TextView"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@+id/imgCheckWallet"
                    app:layout_constraintEnd_toEndOf="@+id/tvCheckWalletPath"
                    app:layout_constraintStart_toEndOf="@+id/imgCheckWallet"
                    app:layout_constraintTop_toBottomOf="@+id/tvCheckWalletCurrency" />

                <TextView
                    android:id="@+id/tvCheckComment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@+id/tvCheckMoney"
                    app:layout_constraintStart_toStartOf="@+id/imgCheckWallet"
                    app:layout_constraintTop_toBottomOf="@+id/imgCheckWallet" />

                <Button
                    android:id="@+id/btnEdit"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/edit"
                    app:layout_constraintBottom_toBottomOf="@+id/btnOrder"
                    app:layout_constraintEnd_toStartOf="@+id/btnOrder"
                    app:layout_constraintStart_toStartOf="@+id/imgCheckWallet"
                    app:layout_constraintTop_toTopOf="@+id/btnOrder" />

                <Button
                    android:id="@+id/btnOrder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/order_a_payout"
                    app:layout_constraintEnd_toEndOf="@+id/tvCheckMoney"
                    app:layout_constraintStart_toEndOf="@+id/btnEdit"
                    app:layout_constraintTop_toBottomOf="@+id/tvCheckComment" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintWithdrawalDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/constraintCheckWithdrawalDialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imgWithdrawalDialogWallet"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:scaleType="centerInside"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/payeer" />

                    <TextView
                        android:id="@+id/tvDialogWalletName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/withdrawal_to_payeer"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imgWithdrawalDialogWallet"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tvDialogChooseCurrency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/chooseWalletCurrency"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout4"
                    app:layout_constraintStart_toStartOf="@+id/constraintLayout4"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout4"
                    app:layout_constraintStart_toStartOf="@+id/constraintLayout4"
                    app:layout_constraintTop_toBottomOf="@+id/tvDialogChooseCurrency">

                    <RadioButton
                        android:id="@+id/radioBtnUSD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="USD" />

                    <RadioButton
                        android:id="@+id/radioBtnEUR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="EUR" />

                    <RadioButton
                        android:id="@+id/radioBtnRUB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="RUB" />
                </RadioGroup>

                <TextView
                    android:id="@+id/textView63"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/type_wallet_path"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout4"
                    app:layout_constraintStart_toStartOf="@+id/constraintLayout4"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                <EditText
                    android:id="@+id/edWalletPath"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:ems="10"
                    android:hint="@string/necessary"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="@+id/textView63"
                    app:layout_constraintStart_toStartOf="@+id/textView63"
                    app:layout_constraintTop_toBottomOf="@+id/textView63" />

                <TextView
                    android:id="@+id/textView64"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/comment"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/edWalletPath"
                    app:layout_constraintStart_toStartOf="@+id/edWalletPath"
                    app:layout_constraintTop_toBottomOf="@+id/edWalletPath" />

                <EditText
                    android:id="@+id/edComment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:ems="10"
                    android:hint="@string/not_necessary"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="@+id/textView64"
                    app:layout_constraintStart_toStartOf="@+id/textView64"
                    app:layout_constraintTop_toBottomOf="@+id/textView64" />

                <Button
                    android:id="@+id/btnDone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/done"
                    app:layout_constraintEnd_toEndOf="@+id/edComment"
                    app:layout_constraintStart_toEndOf="@+id/btnCancel"
                    app:layout_constraintTop_toBottomOf="@+id/edComment" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:text="@string/cancel"
                    app:layout_constraintBottom_toBottomOf="@+id/btnDone"
                    app:layout_constraintEnd_toStartOf="@+id/btnDone"
                    app:layout_constraintStart_toStartOf="@+id/edComment"
                    app:layout_constraintTop_toTopOf="@+id/btnDone" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>